--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>DWEC - UT04 Práctica Video en Streaming.</title>
     </head>
     <body>
-        
+        <h1>DWEC - UT04 Práctica Video en Streaming.</h1>
+        <script type="module" src="js/test.js"></script>
     </body>
 </html>
