Script de app MVC importado en el index.html

--- a/index.html
+++ b/index.html
@@ -223,5 +223,6 @@
 
         <!-- All JavaScript files -->
         <script src="js/test.js" type="module"></script>
+        <script src="js/app/VideoSystemApp.js" type="module"></script>
     </body>
 </html>
