JQuery importado a la página

--- a/index.html
+++ b/index.html
@@ -221,6 +221,10 @@
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/e701483643.js" crossorigin="anonymous"></script>
 
+        <!-- JQuery -->
+        <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
+        crossorigin="anonymous"></script>
+
         <!-- All JavaScript files -->
         <script src="js/test.js" type="module"></script>
         <script src="js/app/VideoSystemApp.js" type="module"></script>
