Las categorias ya se muestran en el menú dropdown de la barra de navegación

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                             </a>
                 
                             <ul class="all-categories dropdown-menu">
+                                <!-- <li><a class="cat dropdown-item" href="#"></a></li>
                                 <li><a class="cat dropdown-item" href="#"></a></li>
-                                <li><a class="cat dropdown-item" href="#"></a></li>
-                                <li><a class="cat dropdown-item" href="#"></a></li>
+                                <li><a class="cat dropdown-item" href="#"></a></li> -->
                             </ul>
                         </li>
                         <li class="nav-item"><a class="productions nav-link" href="#productions-panel">Productions</a></li>
@@ -226,7 +226,7 @@
         crossorigin="anonymous"></script>
 
         <!-- All JavaScript files -->
-        <script src="js/test.js" type="module"></script>
+        <!-- <script src="js/test.js" type="module"></script> -->
         <script src="js/app/VideoSystemApp.js" type="module"></script>
     </body>
 </html>
