--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
                                 Categories
                             </a>
                 
-                            <ul class="all-categories dropdown-menu">
-                                <!-- <li><a class="cat dropdown-item" href="#"></a></li>
-                                <li><a class="cat dropdown-item" href="#"></a></li>
-                                <li><a class="cat dropdown-item" href="#"></a></li> -->
-                            </ul>
+                            <ul class="all-categories dropdown-menu"></ul>
                         </li>
                         <li class="nav-item"><a class="productions nav-link" href="#productions-panel">Productions</a></li>
                         <li class="nav-item"><a class="directors nav-link" href="#">Directors</a></li>
@@ -89,37 +85,7 @@
             <!-- CATEGORIES ZONE -->
             <section class="mt-3 categories-zone container-fluid text-white text-center">
                 <h1 class="display-5 mb-3">Categories</h1>
-                <div class="d-flex justify-content-center cat-list">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="cat-card shadow p-3 mb-5 rounded card" style="width: 18rem;">
-                                <div class="card-body">
-                                    <h3 class="card-title"></h3>
-                                    <p class="card-text"></p>
-                                    <a href="#" class="show-productions-btn btn btn-primary">Show productions <i class="fa-solid fa-arrow-down"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="cat-card shadow p-3 mb-5 rounded card" style="width: 18rem;">
-                                <div class="card-body">
-                                    <h3 class="card-title"></h3>
-                                    <p class="card-text"></p>
-                                    <a href="#" class="show-productions-btn btn btn-primary">Show productions <i class="fa-solid fa-arrow-down"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="cat-card shadow p-3 mb-5 rounded card" style="width: 18rem;">
-                                <div class="card-body">
-                                    <h3 class="card-title"></h3>
-                                    <p class="card-text"></p>
-                                    <a href="#" class="show-productions-btn btn btn-primary">Show productions <i class="fa-solid fa-arrow-down"></i> </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div class="d-flex justify-content-evenly cat-list"></div>
             </section>
 
             <!-- CONTENEDOR PARA MOSTRAR LAS PRODUCCIONES DE UNA CATEGORÍA -->
