La zona central de categorias ya se muestra correctamente al recargar la página y pinchando en los enlaces de inicio.

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
         <!-- CENTRAL ZONE -->
         <main class="container-fluid text-white text-center">
             <!-- CATEGORIES ZONE -->
-            <section class="mt-3 categories-zone container-fluid text-white text-center">
+            <!-- <section class="mt-3 categories-zone container-fluid text-white text-center">
                 <h1 class="display-5 mb-3">Categories</h1>
                 <div class="d-flex justify-content-evenly cat-list"></div>
-            </section>
+            </section> -->
 
             <!-- CONTENEDOR PARA MOSTRAR LAS PRODUCCIONES DE UNA CATEGORÍA -->
             <section id="show-productions-category">
