--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 <div class="d-inline-flex align-items-center justify-content-lg-end">
                     <div class="user-panel text-white">
-                        <span class="username">User </span>
+                        <span class="username"></span>
                         <span><i class="bg-danger p-2 rounded-circle px-2 fa-solid fa-solid fa-user"></i></span>
                     </div>
                 </div>
@@ -59,17 +59,7 @@
         <!-- PRODUCTIONS CAROUSEL -->
         <div id="carouselControls" class="car p-5 text-white text-center carousel slide" data-bs-ride="carousel">
             <h1 class="display-5">Some Productions</h1>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <h2 class="production d-block w-100">Production #1</h2>
-                </div>
-                <div class="carousel-item">
-                    <h2 class="production d-block w-100">Production #2</h2>
-                </div>
-                <div class="carousel-item">
-                    <h2 class="production d-block w-100">Production #3</h2>
-                </div>
-            </div>
+            <div class="carousel-inner"></div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
