--- a/index.html
+++ b/index.html
@@ -33,14 +33,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="home nav-link" href="#">Home</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="cat nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                                href="#">
-                                Categories
-                            </a>
-                
-                            <ul class="all-categories dropdown-menu"></ul>
-                        </li>
+                        <li class="nav-item"><a class="categories nav-link" href="#">Categories</a></li>
                         <li class="nav-item"><a class="productions nav-link" href="#">Productions</a></li>
                         <li class="nav-item"><a class="directors nav-link" href="#">Directors</a></li>
                         <li class="nav-item"><a class="actors nav-link" href="#">Actors</a></li>
