El método showUser ha sido mejorado

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- NAVBAR -->
         <nav class="shadow p-3 mb-5 navbar navbar-expand-sm navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Video Manager</a>
+                <a class="navbar-brand" href="#"><i class="fa-solid fa-play"></i> Video Manager</a>
                 
                 <button class="navbar-toggler" 
                         type="button" data-bs-toggle="collapse" 
@@ -32,10 +32,10 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="home nav-link" href="#">Home</a></li>
-                        <li class="nav-item"><a class="productions nav-link" href="#">Productions</a></li>
-                        <li class="nav-item"><a class="directors nav-link" href="#">Directors</a></li>
-                        <li class="nav-item"><a class="actors nav-link" href="#">Actors</a></li>
+                        <li class="nav-item"><a class="home nav-link" href="#"><i class="fa-solid fa-house"></i> Home</a></li>
+                        <li class="nav-item"><a class="productions nav-link" href="#"><i class="fa-solid fa-film"></i> Productions</a></li>
+                        <li class="nav-item"><a class="directors nav-link" href="#"><i class="fa-solid fa-user-tie"></i>Directors</a></li>
+                        <li class="nav-item"><a class="actors nav-link" href="#"><i class="fa-solid fa-graduation-cap"></i>Actors</a></li>
                     </ul>
                 </div>
 
