Las categorias ahora se muestran también en la navbar

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="home nav-link" href="#"><i class="fa-solid fa-house"></i> Home</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categories</a>
+                            <ul class="navbar-categories-menu dropdown-menu"></ul>
+                          </li>
                         <li class="nav-item"><a class="productions nav-link" href="#"><i class="fa-solid fa-film"></i> Productions</a></li>
                         <li class="nav-item"><a class="directors nav-link" href="#"><i class="fa-solid fa-user-tie"></i>Directors</a></li>
                         <li class="nav-item"><a class="actors nav-link" href="#"><i class="fa-solid fa-graduation-cap"></i>Actors</a></li>
@@ -63,8 +67,7 @@
         </div>
 
         <!-- CENTRAL ZONE -->
-        <main class="container-fluid text-white text-center">
-        </main>
+        <main class="container-fluid text-white text-center"></main>
 
         <footer class="shadow p-3 container-fluid text-white text-center">
             <h1 class="">Video Manager 1.0</h1>
