--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="home nav-link" href="#"><i class="fa-solid fa-house"></i> Home</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Categories</a>
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fa-solid fa-folder"></i> Categories
+                            </a>
                             <ul class="navbar-categories-menu dropdown-menu"></ul>
                           </li>
                         <li class="nav-item"><a class="productions nav-link" href="#"><i class="fa-solid fa-film"></i> Productions</a></li>
