Bug resuelto en el formulario de desasignar categoría.

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="home nav-link" href="#"><i class="fa-solid fa-house"></i> Home</a></li>
+                        <li class="nav-item"><a class="home nav-link" href="#" title="Restaura la página"><i class="fa-solid fa-house"></i> Home</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" title="Vistazo rápido de todas las categorías">
                                 <i class="fa-solid fa-folder"></i> Categories
                             </a>
                             <ul class="navbar-categories-menu dropdown-menu"></ul>
                           </li>
-                        <li class="nav-item"><a class="productions nav-link" href="#"><i class="fa-solid fa-film"></i> Productions</a></li>
-                        <li class="nav-item"><a class="directors nav-link" href="#"><i class="fa-solid fa-user-tie"></i>Directors</a></li>
-                        <li class="nav-item"><a class="actors nav-link" href="#"><i class="fa-solid fa-graduation-cap"></i>Actors</a></li>
+                        <li class="nav-item"><a class="productions nav-link" href="#" title="Muestra el panel de producciones"><i class="fa-solid fa-film"></i> Productions</a></li>
+                        <li class="nav-item"><a class="directors nav-link" href="#" title="Muestra el panel de directores"><i class="fa-solid fa-user-tie"></i>Directors</a></li>
+                        <li class="nav-item"><a class="actors nav-link" href="#" title="Muestra el panel de actores"><i class="fa-solid fa-graduation-cap"></i>Actors</a></li>
                     </ul>
                 </div>
 
