--- a/productionDetails.html
+++ b/productionDetails.html
@@ -16,7 +16,24 @@
     </head>
     <body>
 
-        <div class="info-container d-flex justify-content-center align-content-center align-items-center text-white"></div>
+        <div class="d-flex justify-content-center info-production-container text-white text-center">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="p-title"></h1>
+                    <h3 class="p-type"></h3>
+                    <p class="p-resource"></p>
+                    <p class="p-date"></p>
+                    <p class="p-nationality"></p>
+                    <p class="p-synopsis"></p>
+
+                    <h4>Reparto</h4>
+                    <ul class="list-group production-casting"></ul>
+
+                    <button class="mt-3 close-window-btn btn btn-primary">Cerrar ventana</button>
+                </div>
+            </div>
+        </div>
+
 
         <!-- Bootstrap Javascript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
