El usuario ya se puede autenticar con el usuario admin y la contraseña admin1234

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="d-inline-flex align-items-center justify-content-lg-end">
                     <div class="user-panel text-white">
                         <span class="username"></span>
-                        <span><i class="bg-danger p-2 rounded-circle px-2 fa-solid fa-solid fa-user"></i></span>
+                        <span></span>
                     </div>
                 </div>
             </div>
