Ya se pueden añadir producciones a favoritos

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                         <li class="nav-item"><a class="productions nav-link" href="#" title="Muestra el panel de producciones"><i class="fa-solid fa-film"></i> Productions</a></li>
                         <li class="nav-item"><a class="directors nav-link" href="#" title="Muestra el panel de directores"><i class="fa-solid fa-user-tie"></i>Directors</a></li>
                         <li class="nav-item"><a class="actors nav-link" href="#" title="Muestra el panel de actores"><i class="fa-solid fa-graduation-cap"></i>Actors</a></li>
+                        <li class="nav-item"><a class="favourites nav-link" href="#" title="Muestra el panel de favoritos"><i class="fa-solid fa-star"></i></i>Favourites</a></li>
                     </ul>
                 </div>
 
                 <div class="d-inline-flex align-items-center justify-content-lg-end">
                     <div class="user-panel text-white">
                         <span class="username"></span>
-                        <span></span>
                     </div>
                 </div>
             </div>
