Intentando hacer la copia de seguridad

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                         <li class="nav-item"><a class="actors nav-link" href="#" title="Muestra el panel de actores"><i class="fa-solid fa-graduation-cap"></i>Actors</a></li>
                         <li class="nav-item"><a class="favourites nav-link" href="#" title="Muestra el panel de favoritos"><i class="fa-solid fa-star"></i></i>Favourites</a></li>
                     </ul>
+
+                    <form name="backup-form" class="backup-form" method="POST" action="#">
+                        <button class="backup-btn btn btn-success" type="submit"><i class="fa-solid fa-database"></i> Backup</button>
+                    </form>
                 </div>
 
                 <div class="d-inline-flex align-items-center justify-content-lg-end">
